- Added containers for home component. - Fixed spacing on mobile login page.

--- a/src/client/app/components/landing/landing.component.scss
+++ b/src/client/app/components/landing/landing.component.scss
@@ -8,27 +8,8 @@
   display: flex;
   flex-direction: column;
   width: 100%;
-  height: 100vh;
+  min-height: 100vh;
   background-color: $gray-600;
-}
-
-.menu-item-container {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  padding: 5px;
-}
-
-.container {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  width: 100%;
-  height: 100vh;
 }
 
 .applications {
@@ -36,7 +17,34 @@
   display: -ms-flexbox;
   display: flex;
   flex-direction: column;
-  width: 70%;
-  height: 100vh;
-  background-color: $gray-400;
+  width: 100%;
+  padding: 20px;
+}
+
+.apps-text-style {
+  color: $white;
+}
+
+.app-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  width: 100%;
+  justify-content: space-evenly;
+}
+
+.app {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 20px 0px 20px 0px;
+  width: 250px;
+  min-width: 250px;
+  height: 250px;
+  min-height: 250px;
+  background-color: blue;
 }
