--- a/src/client/app/components/login-page/login-page.component.scss
+++ b/src/client/app/components/login-page/login-page.component.scss
@@ -35,6 +35,8 @@
   display: -ms-flexbox;
   display: flex;
   flex-direction: column;
+  justify-content: center;
+  align-items: center;
   width: 100%;
   height: 100%;
   z-index: 2;
@@ -49,17 +51,21 @@
   align-items: center;
   width: 100%;
   height: 90%;
-  min-height: 500px;
+  min-height: 400px;
 }
 
 .welcome-style {
   font-family: "Cinzel", sans-serif;
   color: $white;
+  text-align: center;
+  width: 100%;
 }
 
 .intro-style {
   font-family: "Open Sans", sans-serif;
   color: $white;
+  text-align: center;
+  padding: 0px 5px 0px 5px;
 }
 
 .intro-paragraph-container {
